fix: display radius clipping

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
   font-size: 24px;
   text-align: right;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
   margin-bottom: 15px;
   display: flex;
   align-items: center;
